fixed buttons and links and some spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
 }
 
 body {
-    margin: 0;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
@@ -24,40 +23,40 @@ footer {
     color: white
 }
 
-
-
-header {
-    justify-content: space-between;
-    align-items: flex-end;
+header,
+.sub-header {
     padding-top: 10px;
     padding-bottom: 75px;
-    padding-left: 15%;
-    padding-right: 15%;
-
-    
-}
-
-.sub-header {
-    align-items: center;
+    padding-left: 8%;
+    padding-right: 8%;
     justify-content: space-between;
-    padding-bottom: 64px;
-    padding-left: 15%;
-    padding-right: 15%;
-    margin-bottom: 2%;
+    align-items: flex-end;
+
 }
 
+.links {
+    display: flex;
+    gap: 32px;
+    list-style: none;
+}
+
+.links a {
+    text-decoration: none;
+    color: inherit;
+}
 
 .sub-header section {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 300px;
     gap: 10px;
+    max-width: 435px;
 }
 
-section h1 {
-    max-width: 250px;
+.sub-header h1 {
+    font-size: 48px;
+    font-weight: 900;
 }
 
 .sub-header img {
@@ -67,29 +66,20 @@ section h1 {
 
 button {
     padding: 7px 30px;
-    text-decoration: none;border-radius: 8px;
+    text-decoration: none;
+    border-radius: 8px;
     border: none;
     font-weight: 700;
-    text-align: center;
+    cursor: pointer
 }
 
-.links {
-    display: flex;
-    flex: auto;
-    gap: 32px;
-    justify-content: space-between;
-    align-self: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
 main {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    gap: 128px;
+    gap: 100px;
     align-items: center;
+    margin-top: 3%;
 }
 
 main .content {
@@ -97,10 +87,17 @@ main .content {
     flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
+    align-self: stretch;
+    flex: auto;
+    color:#1F2937;
+    gap: 25px;
 }
 
 .content ul {
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .content li {
@@ -109,11 +106,6 @@ main .content {
     justify-content: space-between;
     align-items: center;
     gap: 20px;
-    
-}
-
-.content h2 {
-    margin-bottom: 5%;
 }
 
 .image-list img {
@@ -127,6 +119,7 @@ main .content {
 
 .image-list p {
     font-size: 18px;
+    max-width: 225px;
     color: #1F2937;
     text-align: center;
 }
